loadbalancer.tf
# resource "aws_security_group" "load_balancer_security_group" {
#   vpc_id = aws_vpc.main.id

#   ingress {
#     from_port        = 8080
#     to_port          = 8080
#     protocol         = "tcp"
#     cidr_blocks      = ["0.0.0.0/0"]
#     ipv6_cidr_blocks = ["::/0"]
#   }
#   ingress {
#     from_port        = 80
#     to_port          = 80
#     protocol         = "tcp"
#     cidr_blocks      = ["0.0.0.0/0"]
#     ipv6_cidr_blocks = ["::/0"]
#   }

#   egress {
#     from_port        = 0
#     to_port          = 0
#     protocol         = "-1"
#     cidr_blocks      = ["0.0.0.0/0"]
#     ipv6_cidr_blocks = ["::/0"]
#   }
#   tags = {
#     Name = "lb-sg"
#   }
# }

# resource "aws_lb_target_group" "target_group" {
#   name        = "lb-tg"
#   port        = 8080
#   protocol    = "HTTP"
#   target_type = "ip"
#   vpc_id      = aws_vpc.main.id

#   health_check {
#     healthy_threshold   = "3"
#     interval            = "300"
#     protocol            = "HTTP"
#     matcher             = "200"
#     timeout             = "3"
#     path                = "/v1/status"
#     unhealthy_threshold = "2"
#   }

#   tags = {
#     Name = "web-lb-tg"
#   }
# }

# resource "aws_lb" "application_load_balancer" {
#   name               = "web-alb"
#   internal           = false
#   load_balancer_type = "application"
#   subnets            = [aws_subnet.main-subnet-public-1a.id, aws_subnet.main-subnet-public-1b.id]
#   security_groups    = [aws_security_group.load_balancer_security_group.id]

#   tags = {
#     Name = "web-alb"
#   }
# }

# resource "aws_lb_listener" "listener" {
#   load_balancer_arn = aws_lb.application_load_balancer.id
#   port              = "80"
#   protocol          = "HTTP"

#   default_action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.target_group.id
#   }
# }
